# Robuddy-Code

./: README.md  README.txt  robuddy_goals.txt  robuddynew.dae  vector.launch
Full System Launch Script/: README.md  run_senior_design_sim.sh
Simulation Tests/: README.md  robuddy_goals.txt
Simulation Tests/LMS Models and Floor Plans/: Floor0SubModel.dae  Floor0SubModel.stl
Simulation Tests/Sample Tests/: README.md  test1_README.md
Simulation Tests/Sample Tests/Test1/: README.md  goals.txt  test1_README.md
Simulation Tests/Sample Tests/Test2/: README.md  goals.txt
Simulation Tests/Sample Tests/Test3/: README.md  goals.txt
Simulation Tests/Sample Tests/Test4/: README.md  goals.txt
Simulation Tests/Sample Tests/Test5/: README.md  goals.txt
Simulation Tests/Sample Tests/Test6/: README.md  goals.txt
Simulation Tests/Sample Tests/Test7/: README.md  goals.txt
Software/HLP-R/hlpr_perception/hlpr_knowledge_retrieval/: CMakeLists.txt
Software/HLP-R/hlpr_simulator/hlpr_gazebo/: CMakeLists.txt  package.xml
Software/freenect2/lib/: libfreenect2.so.0.2.0
Software/freenect2/lib/pkgconfig/: freenect2.pc
Software/launch_scripts/: run_senior_design_sim.sh
Software/stanley/vector_v1/: LICENSE  README.md
Software/stanley/vector_v1/vector_common/vector_msgs/: CMakeLists.txt  package.xml
Software/stanley/vector_v1/vector_common/vector_msgs/msg/: Configuration.msg
Software/stanley/vector_v1/vector_common/vector_navigation/vector_costmap_plugins/: CMakeLists.txt  costmap_plugins.xml
Software/stanley/vector_v1/vector_common/vector_navigation/vector_costmap_plugins/include/vector_costmap_plugins/: polygon_obstacle_layer.h
Software/stanley/vector_v1/vector_common/vector_navigation/vector_costmap_plugins/plugins/: polygon_obstacle_layer.cpp
Software/stanley/vector_v1/vector_common/vector_pan_tilt/: CMakeLists.txt
Software/stanley/vector_v1/vector_common/vector_pan_tilt/config/: pan_tilt_joint_controllers.yaml  pan_tilt_joint_trajectory_controller.yaml
Software/stanley/vector_v1/vector_common/vector_pan_tilt/launch/: pan_tilt_controller.launch  pan_tilt_controller_manager.launch  pan_tilt_controller_spawner.launch  pan_tilt_controller_test.launch  pan_tilt_test.launch
Software/stanley/vector_v1/vector_common/vector_pan_tilt/scripts/: pan_tilt_home  pan_tilt_joint_state_publisher  pan_tilt_test  reset_pan_tilt_usb
Software/stanley/vector_v1/vector_common/vector_ros/: CMakeLists.txt
Software/stanley/vector_v1/vector_common/vector_ros/cfg/: vector.cfg
Software/stanley/vector_v1/vector_common/vector_ros/launch/: jaco_jtas.launch  pan_tilt_teleop_test.launch  robotiq_85.launch  vector.launch  vector_faultlog_parser.launch  vector_teleop.launch
Software/stanley/vector_v1/vector_common/vector_ros/launch/config/: cmd_vel_mux.yaml  vector_params.yaml
Software/stanley/vector_v1/vector_common/vector_ros/src/vector/: crc16.py  faultlog_parser.py  io_eth.py  move_base.py  robuddy_main.py  system_defines.py  utils.py  vector_comm.py  vector_control_marker.py  vector_data_classes.py  vector_linear_actuator.py  vector_pan_tilt_teleop.py  vector_system_wd.py  vector_teleop.py  vector_teleop_full_system.py
Software/stanley/vector_v1/vector_common/vector_ros/src/vector_gripper_interface/: robotiq_85_driver.py  robotiq_85_gripper.py  robotiq_85_gripper_test.py
Software/stanley/vector_v1/vector_common/vector_ros/src/vector_joint_interface/: angles.py  helpers.py  jaco_cartesian_vel_ctl.py  jaco_joint_controller.py  jaco_joint_pid.py
Software/stanley/vector_v1/vector_common/vector_ros/src/vector_jtas/: bezier.py  trajectory_smoother.py  vector_jtas.py
Software/stanley/vector_v1/vector_desktop/vector_dashboard/: CMakeLists.txt
Software/stanley/vector_v1/vector_desktop/vector_dashboard/plugins/: plugin.xml
Software/stanley/vector_v1/vector_desktop/vector_dashboard/scripts/: vector_dashboard
Software/stanley/vector_v1/vector_desktop/vector_dashboard/src/vector_dashboard/: dashboard.py
Software/stanley/vector_v1/vector_desktop/vector_desktop/: CMakeLists.txt  package.xml
Software/stanley/vector_v1/vector_embedded_firmware/: vector_sic_app.2016-04-04.2324_e.hex  (+1 more)
Software/stanley/vector_v1/vector_robot/vector_bringup/: CMakeLists.txt  package.xml
Software/stanley/vector_v1/vector_robot/vector_bringup/launch/: vector_system.launch
Software/stanley/vector_v1/vector_robot/vector_bringup/launch/localization/: vector_odometry.launch
Software/stanley/vector_v1/vector_robot/vector_bringup/launch/manipulation/: vector_manipulation.launch
Software/stanley/vector_v1/vector_robot/vector_bringup/launch/platform/: vector.launch
Software/stanley/vector_v1/vector_robot/vector_bringup/launch/platform/config/: vector_params.yaml
Software/stanley/vector_v1/vector_robot/vector_bringup/launch/sensors/: vector_sensors.launch
Software/stanley/vector_v1/vector_robot/vector_bringup/launch/sensors/config/: laser_scan_filter.yaml
Software/stanley/vector_v1/vector_robot/vector_bringup/launch/teleop/: vector_teleop.launch
Software/stanley/vector_v1/vector_robot/vector_bringup/launch/vector2/: vector2.launch
Software/stanley/vector_v1/vector_robot/vector_bringup/launch/vector2/kinect2/: kinect2_bridge.launch
Software/stanley/vector_v1/vector_robot/vector_bringup/launch/vector2/pan_tilt/: pan_tilt_controller_manager.launch  pan_tilt_controller_spawner.launch  pan_tilt_home.launch
Software/stanley/vector_v1/vector_robot/vector_bringup/launch/vector2/utilities/: utilities_bringup.launch
Software/stanley/vector_v1/vector_robot/vector_bringup/scripts/: install_vector_core  uninstall_vector_core
Software/wpi_jaco/wpi_jaco_msgs/: CMakeLists.txt
Software/wpi_jaco/wpi_jaco_wrapper/: CMakeLists.txt
vector_ws/: frames.gv
vector_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
vector_ws/devel/lib/pkgconfig/: jaco_sdk.pc  (+56 more)
vector_ws/src/:  ar_track_alvar_msgs  HBlqr  ar_track_alvar  hlpr_manipulation  hlpr_perception  hlpr_simulator  jaco_sdk  pearl_task1  pearl_task2  rail_manipulation_msgs  robotiq_85_msgs  trac_ik  vector_v1  wpi_jaco_msgs  wpi_jaco_wrapper
(+867 files in other folders)
