<?xml version="1.0"?>
<package>
    <name>vector_msgs</name>
    <version>0.0.1</version>
    <description>Drivers and nodes related to Stanley Innovation Vector</description>
    
    <maintainer email="dev@stanleyinnovation.com">Patrick Hussey</maintainer>
    <author>Patrick Hussey</author>
    <url type="repository">https://github.com/stanley_innovation</url>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roslaunch</build_depend>
    <build_depend>message_generation</build_depend>
    <run_depend>message_runtime</run_depend>  
    <build_depend>std_msgs</build_depend>
    <run_depend>std_msgs</run_depend>
	<export>
	</export>
</package>
