<?xml version="1.0"?>
<package>
    <name>vector_desktop</name>
    <version>0.0.1</version>
    <description>Remote visualization and control packages for the Stanley Innovation Vector</description>
    <maintainer email="dev@stanleyinnovation.com">Patrick Hussey</maintainer>
    <author>Patrick Hussey</author>
    <url type="repository">https://github.com/stanley_innovation</url>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <run_depend>vector</run_depend>
    <run_depend>vector_viz</run_depend>
    <run_depend>vector_dashboard</run_depend>
    <run_depend>vector_remote_teleop</run_depend>

    <export>
        <metapackage/>
    </export>
</package>
