<package>
    <name>vector_bringup</name>
    <version>0.0.1</version>
    <description>System launch file and environment hooks for vector2 PC (vision)</description>
    <maintainer email="dev@stanleyinnovation.com">Patrick Hussey</maintainer>
    <author>Patrick Hussey</author>
    <url type="repository">https://github.com/stanley_innovation</url>
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roslaunch</build_depend>
    <run_depend>vector_common</run_depend>
    <run_depend>vector_upstart</run_depend>
    <run_depend>vector_sensor_filters</run_depend>
    
	<export>
	</export>
</package>
